--- a/CinemaProject.WebAPI/CinemaProject.WebAPI/CinemaProject.WebAPI.csproj
+++ b/CinemaProject.WebAPI/CinemaProject.WebAPI/CinemaProject.WebAPI.csproj
@@ -1,14 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\CinemaProject.BLL\CinemaProject.BLL.csproj" />
   </ItemGroup>
 
 </Project>
