Change database initializing

--- a/CinemaProject.WebAPI/CinemaProject.WebAPI/appsettings.json
+++ b/CinemaProject.WebAPI/CinemaProject.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CinemaConnection": "Data Source=WSA-105-74;Initial Catalog=CinemaDB;Integrated Security=SSPI;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
