--- a/CinemaProject.WebAPI/CinemaProject.WebAPI/appsettings.json
+++ b/CinemaProject.WebAPI/CinemaProject.WebAPI/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "CinemaConnection": "Data Source=WSA-105-74;Initial Catalog=CinemaDB;Integrated Security=SSPI;"
   },
+  "AppSettings": {
+    "Secret": "I_am_Arseny_but_in_Steam_I_use_nickname_parhimarsen_wich_contains_and_my_surname"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
