--- a/CinemaProject.WebAPI/CinemaProject.BLL/CinemaProject.BLL.csproj
+++ b/CinemaProject.WebAPI/CinemaProject.BLL/CinemaProject.BLL.csproj
@@ -10,8 +10,12 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
-    <Folder Include="Mappers\" />
-    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="5.2.2" />
   </ItemGroup>
 
 </Project>
