--- a/CinemaProject.WebAPI/CinemaProject.BLL/CinemaProject.BLL.csproj
+++ b/CinemaProject.WebAPI/CinemaProject.BLL/CinemaProject.BLL.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.5.8" />
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="5.2.2" />
   </ItemGroup>
 
