--- a/CinemaProject.WebAPI/CinemaProject.WebAPI/CinemaProject.WebAPI.csproj
+++ b/CinemaProject.WebAPI/CinemaProject.WebAPI/CinemaProject.WebAPI.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.5.8" />
   </ItemGroup>
 
   <ItemGroup>
