--- a/CinemaProject.Angular/package.json
+++ b/CinemaProject.Angular/package.json
@@ -11,14 +11,19 @@
   "private": true,
   "dependencies": {
     "@akveo/ng2-completer": "^9.0.1",
+    "@angular-material-extensions/input-counter": "^0.1.1",
     "@angular/animations": "~12.0.1",
+    "@angular/cdk": "^12.1.3",
     "@angular/common": "~12.0.1",
     "@angular/compiler": "~12.0.1",
     "@angular/core": "~12.0.1",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.0.1",
+    "@angular/material": "^12.1.3",
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@schematics/angular": "^9.1.0",
     "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
     "ng2-completer": "^9.0.1",
