--- a/CinemaProject.Angular/package.json
+++ b/CinemaProject.Angular/package.json
@@ -27,8 +27,10 @@
     "@schematics/angular": "^9.1.0",
     "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "ng2-completer": "^9.0.1",
     "ng2-smart-table": "^1.7.2",
+    "ngx-bootstrap": "^7.0.0",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.1.0",
